--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,12 +157,6 @@ input,textarea {
 /* 3.3. Image Group------
 -----------------------*/
 
-.img-group-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .img-group {
     max-width: 100%;
 
@@ -174,19 +168,7 @@ input,textarea {
 
 .imggroup-l {
     max-width: 100%;
-}
-
-.group-img {
-    max-width: 100%;
-}
-
-
-.img-group-row {
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;   
+    display: block;
 }
 
 .imggroup-md {
