--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,6 +287,7 @@ input,textarea {
     font-family: 'Oswald', sans-serif;
     font-size: 1.667rem;
     text-align: center;   
+    color: #2F4858;
 }
 
 .form-container {
